# -AI-Personalized-Learning-Platform-with-integrity

./: .gitignore  .replit  README.md  app.py  check.py  extensions.py  models.py  plagiarism.py  plagiarism_checker.py  pyproject.toml  requirements.txt  routes.py
attached_assets/: Pasted--Project-Student-Assignment-Plagiarism-Checker-Overview-Develop-a-plagiarism-detection-system--1739799925382.txt
instance/: plagiarism.db
services/: notification.py
static/css/: styles.css
static/fonts/ttf/: DejaVuSans-Bold.pkl  DejaVuSans.pkl  DejaVuSansMono.pkl
static/js/: chart_utils.js  main.js
templates/: add_subject.html  base.html  challenge_tracker.html  create_assignment.html  dashboard_admin.html  dashboard_student.html  dashboard_teacher.html  login.html  mark_attendance.html  register.html  student_chatbot.html  view_attendance.html  view_challenge.html  view_report.html  view_submissions.html
